@@ -127,11 +127,16 @@ have no effect.
 Not all signal names will be recognized by qsig. If it doesn't recognize the
 signal name, try issuing the signal number instead.
 .LP
-For Unicos on Cray systems only, two special signal names, "suspend" and
-"resume", are used to suspend and resume jobs.  When suspended, a job 
-continues to occupy system resources but is not executing and is not charged
-for walltime.   Manager or operator privilege is required to suspend or resume
-a job.
+Two special signal names, "suspend" and "resume", are used to suspend and
+resume jobs.  Suspend causes a SIGTSTP to be sent to all processes in job's top
+task, wait 5 seconds, and then send a SIGSTOP to all processes in all tasks on
+all nodes in the job.  This differs from TORQUE 2.0.0 which did not have the
+ability to propogate signals to sister nodes.  Resume sends a SIGCONT to all
+processes in all tasks on all nodes.
+.LP
+When suspended, a job continues to occupy system resources but is not executing
+and is not charged for walltime.  The job will be listed in the "S" state.
+Manager or operator privilege is required to suspend or resume a job.
 .if !\n(Pb .ig Ig
 .LP
 If the server receives a
